--- a/BE/package.json
+++ b/BE/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -19,7 +20,10 @@
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
-    "morgan": "^1.10.0",
+    "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4"
+  },
+  "devDependencies": {
+    "morgan": "^1.10.0"
   }
 }
